added gosia's papers and thesis

--- a/generated_publications_satin.html
+++ b/generated_publications_satin.html
@@ -8,6 +8,33 @@
 <dl>
 
 <dt>
+<a name="WrzesinskaPHD07">&nbsp;</a>
+</dt>
+<dd>
+Gosia Wrzesinska.
+ <em>Handling complexity and change in grid computing</em>.
+ PhD thesis, Vrije Universiteit, Amsterdam, The Netherlands, May 2007.
+[&nbsp;<a href="generated_publications_satin_bib.html#WrzesinskaPHD07">bib</a>&nbsp;| 
+<a href="publications/wrzesinska_thesis.pdf">.pdf</a>&nbsp;]
+
+</dd>
+
+
+<dt>
+<a name="WrzesinskaPPOP07">&nbsp;</a>
+</dt>
+<dd>
+Gosia Wrzesinska, Jason Maassen, and Henri&nbsp;E. Bal.
+ Self-adaptive applications on the grid.
+ In <em>ACM SIGPLAN Symposium on Principles and Practice of Parallel
+  Programming (PPoPP'07)</em>, San Jose, CA, USA, March 2007.
+[&nbsp;<a href="generated_publications_satin_bib.html#WrzesinskaPPOP07">bib</a>&nbsp;| 
+<a href="publications/wrzesinska_ppop_2007.pdf">.pdf</a>&nbsp;]
+
+</dd>
+
+
+<dt>
 <a name="WrzesinskaSHARE05">&nbsp;</a>
 </dt>
 <dd>
