--- a/generated_publications_satin_bib.html
+++ b/generated_publications_satin_bib.html
@@ -95,3 +95,27 @@
 }
 </pre>
 
+<a name="WrzesinskaPPOP07"></a><pre>
+@INPROCEEDINGS{<a href="generated_publications_satin.html#WrzesinskaPPOP07">WrzesinskaPPOP07</a>,
+  author = {Gosia Wrzesinska and Jason Maassen and Henri E. Bal},
+  title = {Self-adaptive Applications on the Grid},
+  booktitle = {ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming (PPoPP'07)},
+  month = {March},
+  year = {2007},
+  http = {publications/wrzesinska_ppop_2007.pdf},
+  address = {San Jose, CA, USA}
+}
+</pre>
+
+<a name="WrzesinskaPHD07"></a><pre>
+@PHDTHESIS{<a href="generated_publications_satin.html#WrzesinskaPHD07">WrzesinskaPHD07</a>,
+  author = {Gosia Wrzesinska},
+  title = {Handling complexity and change in grid computing},
+  school = {Vrije Universiteit},
+  year = 2007,
+  address = {Amsterdam, The Netherlands},
+  month = {May},
+  http = {publications/wrzesinska_thesis.pdf}
+}
+</pre>
+
