added link to project site

--- a/content/menu.html
+++ b/content/menu.html
@@ -2,7 +2,8 @@
 <a class="button" href="publications.html">Publications</a>
 <a class="button" href="talks.html">Talks</a>
 <a class="button" href="people.html">People</a>
-<a class="button" href="users.html">Projects Using Ibis</a>
+<a class="button" href="users.html">Projects using Ibis</a>
+<a class="button" href="https://gforge.cs.vu.nl/projects/ibis">Ibis project site @ Gforge</a>
 
 <p class="projectclass">Programming Models</p>
 <a class="button" href="satin.html">Satin</a>
