--- a/content/menu.html
+++ b/content/menu.html
@@ -3,7 +3,7 @@
 <a class="button" href="talks.html">Talks</a>
 <a class="button" href="people.html">People</a>
 <a class="button" href="users.html">Projects using Ibis</a>
-<a class="button" href="https://gforge.cs.vu.nl/projects/ibis">Ibis project site @ Gforge</a>
+<a class="button" href="https://gforge.cs.vu.nl/projects/ibis">Project site @ GForge</a>
 
 <p class="projectclass">Programming Models</p>
 <a class="button" href="satin.html">Satin</a>
