--- a/content/zorilla.html
+++ b/content/zorilla.html
@@ -1,5 +1,5 @@
 <table class=topmenu><tr>
-<td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/zorilla/">Download Zorilla</a></td>
+<td class=topmenu><a class=topmenu href="https://gforge.cs.vu.nl/frs/?group_id=16">Download Zorilla</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#zorilla">Zorilla Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#zorilla">Zorilla Talks</a></td>
 <td class=topmenu><script type="text/javascript"> generate_contact_address( "niels", "cs.vu.nl" ); </script></td>
@@ -57,7 +57,7 @@ consisting of a constantly changing random set of peers. For more information, s
 
 <h3>How do I use Zorilla?</h3>
 
-<p>To start using Zorilla, first <a href="http://gforge.cs.vu.nl/projects/zorilla/">download</a> Zorilla. Zorilla must then be installed, and run, on any machine which needs to be in the Zorilla "grid". See the documentation in the distribution for further details.</p>
+<p>To start using Zorilla, first <a href="https://gforge.cs.vu.nl/frs/?group_id=16">download</a> Zorilla. Zorilla must then be installed, and run, on any machine which needs to be in the Zorilla "grid". See the documentation in the distribution for further details.</p>
 
 <p>After installing Zorilla on one or more machines, jobs can be submitted to Zorilla using either the JavaGAT, or via several console applications. A single command (zubmit) should normally be enough to start running jobs on Zorilla.</p>
 
