added papers of gosip changed some links

--- a/content/gmi.html
+++ b/content/gmi.html
@@ -1,5 +1,5 @@
 <table class=topmenu><tr>
-<td class=topmenu><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download GMI</a></td>
+<td class=topmenu><a class=topmenu href="https://gforge.cs.vu.nl/frs/?group_id=16">Download GMI</a></td>
 <td class=topmenu><a class=topmenu href="publications.html#gmi">GMI Publications</a></td>
 <td class=topmenu><a class=topmenu href="talks.html#gmi">GMI Talks</a></td>
 <td class=topmenu><script type="text/javascript"> generate_contact_address( "jason", "cs.vu.nl" ); </script></td>
