--- a/content/publications.html
+++ b/content/publications.html
@@ -25,7 +25,7 @@ include ("generated_publications_gmi.html");
 include ("generated_publications_zorilla.html");
 ?>
 
-<a name=ibis><h3>Ibis Communication Library</h3></a>
+<a name=ibis><h3>IPL: Ibis Communication Library</h3></a>
 <?php
 include ("generated_publications_ibis.html");
 ?>
