--- a/content/talks.html
+++ b/content/talks.html
@@ -29,7 +29,7 @@ include ("generated_talks_gmi.html");
 include ("generated_talks_zorilla.html");
 ?>
 
-<a name=ibis><h3>Ibis Communication Library</h3></a>
+<a name=ibis><h3>IPL: Ibis Communication Library</h3></a>
 <?php
 include ("generated_talks_ibis.html");
 ?>
