using ipl consistently on site

--- a/content/index.html
+++ b/content/index.html
@@ -2,7 +2,7 @@
 
 <p>This is the website of Ibis. Ibis is an <em>open source</em> Java grid software project of the <a href="http://www.cs.vu.nl/cs">Computer Systems group</a>, which is part of the <a href="http://www.cs.vu.nl">Computer Science department</a> of the <a href="http://www.few.vu.nl">Faculty of Sciences</a> at the <a href="http://www.vu.nl">Vrije Universiteit</a>, Amsterdam, The Netherlands.</p>
 
-<p>The main goal of the Ibis project is to create an efficient Java-based platform for grid computing. The Ibis project currently consists of the Ibis communication library, a variety of programming models, the Java Grid Application Toolkit, and the Zorilla peer-to-peer grid middleware. All components can be deployed on any grid platform, due to the use of Java. Ibis is part of SP 3.1 of the 
+<p>The main goal of the Ibis project is to create an efficient Java-based platform for grid computing. The Ibis project currently consists of the IPL (a communication library), a variety of programming models, the Java Grid Application Toolkit, and the Zorilla peer-to-peer grid middleware. All components can be deployed on any grid platform, due to the use of Java. Ibis is part of SP 3.1 of the 
 <a href="http://www.vl-e.nl">VL-e</a> project.</p>
 
 <p>See the various sections of this website for documentation on the Ibis subprojects, downloads, users of Ibis and other information.</p>
