--- a/content/news.html
+++ b/content/news.html
@@ -1,11 +1,10 @@
 <p class=newsitem>
-November 2007: Ibis 2.0 is available now! 
+November 2007: IPL 2.0 is available now! 
 Ibis now has support for Smartsockets, and is thus able to work in harsh
 networking environments with Firewalls, NATs, etc.  
-This marks the first version
-of Ibis to change the IPL in four years. For now, only the IPL and TCP
+This marks the first API change in four years. For now, only the IPL and TCP
 based imlementations are available. For more information and downloads, see the <a
-href="ipl.html">Ibis subproject page</a>.
+href="ipl.html">IPL subproject page</a>.
 </p>
 
 <p class=newsitem>
