--- a/content/news.html
+++ b/content/news.html
@@ -1,6 +1,6 @@
 <p class=newsitem>
 November 2007: IPL 2.0 is available now! 
-Ibis now has support for Smartsockets, and is thus able to work in harsh
+The IPL now has support for Smartsockets, and is thus able to work in harsh
 networking environments with Firewalls, NATs, etc.  
 This marks the first API change in four years. For now, only the IPL and TCP
 based imlementations are available. For more information and downloads, see the <a
