--- a/content/projects.html
+++ b/content/projects.html
@@ -1,43 +1,15 @@
 <hr>
 
-<h2>Grid Computing</h2>
+
+
+<h2>Masters projects and other student projects</h2>
 <p>
-Grid computing promises the integration of high-performance computing
-facilities, large-scale data repositories, and high-end visualization
-devices,  geographically distributed around the globe, into large
-<em>virtual organizations.</em> The name <em>computational grid</em>
-has been chosen in analogy to the electrical power grid where you
-can tap electrical power by simply "plugging in," without even
-thinking about where the energy is actually produced.  Likewise,
-grid computing promises access to computing cycles and data
-repositories independent of the actual service providers.
-</p>
-
-<p>
-In our group we are have developed, and are still refining,
-a number of complementary support
-libraries (`middleware') to make grid computing accessible.
-<ul>
-<li>Ibis</li>
-<li>JavaGAT</li>
-<li>Saga</li>
-</ul>
-
-<p>
-Interested in contributing to this exciting field? You are
-warmly invited to contact 
-<a href="http://www.cs.vu.nl/~reeuwijk">Kees van Reeuwijk</a>.
-</p>
-
-<hr>
-
-
-
-<h2>Masters projects (and other student projects)</h2>
-
-<p>
+VU students who want to help us develop new features for Ibis
+are very welcome.
 Within our ongoing research work, we frequently have open sub-problems
 that can be assigned to students as thesis projects.
+Have a look at the projects on this page,
+and see if there is anything that matches your skills. 
 </p>
 
 <p>
@@ -54,7 +26,6 @@ courses:
 <p>
 As our work is mostly practically oriented, your programming skills should 
 at least be reasonable.
-</p>
 
 <h3>Open Topics</h3>
 
