+ Updated student projects.

--- a/content/projects.html
+++ b/content/projects.html
@@ -55,7 +55,46 @@ All components can be deployed on any grid platform, due to the use of Java.
 </p>
 
 <ul>
+<li><b>Ibis over UDP</b></li>
+
+<p>
+The Ibis communication library was designed to be usable on multiple different 
+network substrates. Add a new Ibis implementation capable of communicating over
+the UDP protocol, avoiding the overheads caused by the commonly used TCP.
+</p>
+
+<li><b>JSDL support for the JavaGAT</b></li>
+
+<p>
+Website quote: "The Job Submission Description Language (JSDL) is a language
+for describing the requirements of computational jobs for submission to
+resources, particularly in Grid environments, though not restricted to the
+latter." As JSDL is becoming a de-facto standard for job descriptions, it 
+becomes necessary to base JavaGAT's job descriptions on it. In this project,
+it is needed to revise JavaGAT's job description class such that it uses
+JSDL keys, aligned with the recently standardized Simple API for Grid
+Applications (SAGA). Tools for parsing JSDL files (to create job descirptions)
+and for creating JSDL files from JavaGAT job descriptions will become 
+essential. Conversions between different job descriptions (based on what the
+user required in his/her JSDL, and what the underlying middleware can provide)
+will require some form of "intelligent" matching.
+</p>
+
+<p>
+Multiple projects have started to implement 
+<a href="http://www.gridforum.org/documents/GFD.56.pdf">JSDL</a> 
+interfaces to their middleware. With a JSDL-aware frontend for the JavaGAT,
+it would be possible to use JSDL on a number of different middlewares.
+</p>
+
 <li><b>Grid implementation of the coordination language Reo</b></li>
+
+<p>
+The Ibis communication library was designed to be usable on multiple
+different network substrates. Add a new Ibis implementation capable of
+communicating over the UDP protocol, avoiding the overheads caused by
+the commonly used TCP.
+</p>
 
 <p>
 The coordination language Reo offers a model of concurrency where
@@ -106,63 +145,6 @@ generation integration with Reo.
 Implement the multi-threaded shared-memory version of Reo on top IPL,
 giving a working but probably far-for-efficient distributed implementation
 of Reo.
-</p>
-
-
-<li><b>JavaGAT scripting interface / shell</b></li>
-
-<p>
-Running experiments on any grid system is hard. Jobs tend to get stuck
-in a queue, fail for unknown reasons, and keeping track of all input
-files, output files and code is quite hard. Using the JavaGAT,
-applications can use grid systems in an easy, consistent manner.
-However, there is no way to use the JavaGAT directly from a command
-line. If a set of command-line tools would be available for the GAT this
-would be possible. This could be in te form of a JavaGAT shell, a number
-of stand-alone tools, a specialized scripting language with an
-interpreter, or all of the above.
-</p>
-
-<li><b>GAT Desktop</b></li>
-
-<p>
-Design and Implementation of a GAT Desktop. Using the JavaGAT as a
-backend, this environment is able to submit jobs, handle files, steer
-and monitor applications running on a grid, all from a drag-and-drop
-desktop-like environment. 
-See the 
-<a href="http://wiki.cogkit.org/index.php/Java_CoG_Kit">
-Java CoG Desktop</a> for an example of such a system.
-</p>
-
-<li><b>Adaptive Applications using JavaGAT</b></li>
-
-<p>
-At present there is a "Adaptive" module in Ibis which is able to
-automatically adapt the resources of a running application to (changes
-in) the environment. New resources are automatically added if an
-application is too slow, surplus resources are freed if they are not
-needed anymore, and failing or slow resources are removed from the
-computation. There are, however, a few issues with the current
-implementations. First, it is only able to use Zorilla as a resource
-broker and second it is only able to monitor and steer Satin
-applications. Adaptive JavaGAT would be a re-design and
-re-implementation of this module which is ideally able to adapt any
-application running on any middleware supported by the JavaGAT.
-</p>
-
-<li><b>A Proxy GAT</b></li>
-
-<p>
-While the (Java)GAT nicely interfaces to various grid middleware packages,
-one still needs to have adaptors to all this middleware installed on the
-client machine from which GAT applications should be run. Installation
-of grid middleware on client machines can be fairly heavy-weight 
-(e.g., Globus). Alternatively, one could implement a set of proxy adaptors
-that communicate using ssh from a light-weight client machine (like a laptop)
-to a machine on which both a "real" GAT and the middleware is installed.
-This way, GAT programs could run without any middleware installation on
-the client machines.
 </p>
 
 
@@ -222,19 +204,6 @@ an Individual Programming Assignment for PDCS students.
 
 
 <ul>
-<li><b>JSDL support for the JavaGAT</b></li>
-
-Website quote:
-"The Job Submission Description Language (JSDL) is a language for
-describing the requirements of computational jobs for submission to
-resources, particularly in Grid environments, though not restricted to
-the latter."
-
-Multiple projects have started to implement 
-<a href="http://www.gridforum.org/documents/GFD.56.pdf">JSDL</a> 
-interfaces to their middleware. With a JSDL-aware frontend for the JavaGAT,
-it would be possible to use JSDL on a number of different middlewares.
-
 <li><b>JavaGAT SRB adaptor</b></li>
 
 The JavaGAT is currently somewhat low on storage adaptors. An adaptor
@@ -248,14 +217,5 @@ Quote from the SRB website:
 (DGMS) or simply a logical distributed file system based on a
 client-server architecture which presents the user with a single global
 logical namespace or file hierarchy."
-
-<li><b>JavaGAT Condor adaptor</b></li>
-
-<a href="http://www.cs.wisc.edu/condor/">Condor</a> 
-is one of the most stable middleware systems currently available.
-Unfortunately the JavaGAT is not able to use it, as there is no adaptor
-for Condor. Design and implement a job submission adaptor 
-for Condor in the JavaGAT. Also, an evaluation of this adaptor on a pool of
-student lab machines will completement this project.
 
 </ul>
